fix spacing on mobile

--- a/min.css
+++ b/min.css
@@ -233,7 +233,7 @@ textarea {
     }
     #tail, #mainUI
 {
-  height: 600px;
+  height: 730px;
 }
 
 #viewerContext 
